# skills

./: CLAUDE.md  README.md  SKILL.md  TEST_COVERAGE.md  github-spark-tutorial.md  run_tests.py
.claude-plugin/: marketplace.json
skills/apollo-enrich-lead/: SKILL.md
skills/combined-chatbot/: SKILL.md
skills/combined-chatbot/references/: conversation-design.md  platform-integrations.md  testing-patterns.md
skills/combined-chatbot/scripts/: init_chatbot.py
skills/docx/: SKILL.md
skills/email-command-center/: SKILL.md
skills/internal-comms/: SKILL.md
skills/m365-email-command-center/: SKILL.md
skills/m365-email-command-center/references/: email-templates.md  triage-playbook.md
skills/mcp-builder/examples/semantic-scholar/: .env.example  README.md  pyproject.toml
skills/mcp-builder/examples/semantic-scholar/evaluation/: semantic_scholar_eval.xml
skills/mcp-builder/examples/semantic-scholar/semantic_scholar_mcp/: __init__.py  __main__.py  client.py  constants.py  errors.py  formatting.py  models.py  pagination.py  server.py
skills/mcp-builder/examples/semantic-scholar/tests/: test_smoke.py
skills/pdf/: SKILL.md
skills/pdf/scripts/: check_bounding_boxes.py  create_validation_image.py  extract_form_field_info.py  fill_fillable_fields.py
skills/pptx/: SKILL.md
skills/skill-creator/scripts/: init_skill_test.py  package_skill_test.py  quick_validate_test.py  test_init_skill.py  (+2 more)
skills/xlsx/: SKILL.md
template/: SKILL.md
tests/: conftest.py  test_easing.py  test_frame_composer.py  test_init_skill.py  test_package_skill.py  test_quick_validate.py
(+6 files in other folders)
