[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "semantic-scholar-mcp"
version = "0.1.0"
description = "Comprehensive MCP server for the Semantic Scholar Graph, Recommendations, and Datasets APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anthropic Cookbook Contributors" }]
keywords = ["mcp", "semantic-scholar", "research", "papers", "citations", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
semantic-scholar-mcp = "semantic_scholar_mcp.__main__:main"

[project.urls]
Homepage = "https://www.semanticscholar.org/product/api"
Documentation = "https://api.semanticscholar.org/api-docs/"

[tool.hatch.build.targets.wheel]
packages = ["semantic_scholar_mcp"]
